--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <nav class="navbar navbar-default navbar-static-top site-header">
     <div class="container">
       <div class="navbar-header">
-        <h3 class="site-title"><%= link_to "People Points:", '/' %> Revolutionizing the way you give people points</h3>
+        <h3 class="site-title"><%= link_to "People Points:", '/' %> Revolutionizing the way you give people points!</h3>
       </div>
       <div id="navbar">
         <ul class="nav navbar-nav navbar-right">
