--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,22 +3,32 @@
     <div class="person">
       <div class= "container">
 
-        <h5 class="user-name"><%=user.name%></h5>
+        <h5 class="user-name">
+        <%=user.name%>
+        <% if user == current_user %>
+          <%= link_to "Redeem Points", "www.example.com", class: "btn" %>
+        <% elsif current_user %>
+          <%= link_to "Endorse", "www.example.com", class: "btn" %>
+        <% end %>
+        </h5>
+
         <div>
           <%= image_tag(user.image_link || "baby_goat", height: 200, width: 200 ) %>
         </div>
 
         <div>
+
           <p>
-            Points: <%= user.points %>
+            Points: <%= user.points %> Tokens:
           </p>
+
           <p>Rewards:
             <% user.rewards.each do |reward| %>
               <%= image_tag(reward.image_link, height: 15, width: 15) %>
             <% end %>
           </p>
-        </div>
 
+        </div>
       </div>
     </div>
   </div>
