--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,11 +4,11 @@
       <div class= "container">
 
         <h5 class="user-name">
-        <%=user.name%>
+        <%= link_to user.name, user %>
         <% if user == current_user %>
           <%= link_to "Redeem Points", "www.example.com", class: "btn" %>
         <% elsif current_user %>
-          <%= link_to "Endorse", "www.example.com", class: "btn" %>
+          <%= link_to "Endorse", new_user_endorsement_path(user), class: "btn" %>
         <% end %>
         </h5>
 
@@ -19,7 +19,7 @@
         <div>
 
           <p>
-            Points: <%= user.points %> Tokens:
+            Points: <%= user.points %> Tokens: <%= user.tokens %>
           </p>
 
           <p>Rewards:
