--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,16 @@
-<div class="col-sm-6">
+<div class="col-sm-3">
   <h3><%= @user.name %></h3>
   <%= image_tag(@user.image_link || "baby_goat", height: 200, width: 200 ) %>
+</div>
+
+<div class="col-sm-3">
+  <h3>Rewards</h3>
+  <br>
+  <% @user.rewards.each do |reward| %>
+
+    <%= image_tag(reward.image_link, height: 120, width: 120) %>
+
+  <% end %>
 </div>
 
 <div class="col-sm-6">
