--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,7 +19,7 @@
         </h5>
 
         <div>
-          <%= image_tag(user.image_link || "baby_goat", height: 200, width: 200 ) %>
+          <%= image_tag(user.image_link || "http://kingofwallpapers.com/goat/goat-004.jpg", height: 200, width: 200 ) %>
         </div>
 
         <div>
