--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="col-sm-3">
   <h3><%= @user.name %></h3>
-  <%= image_tag(@user.image_link || "baby_goat", height: 200, width: 200 ) %>
+  <%= image_tag(@user.image_link || "http://kingofwallpapers.com/goat/goat-004.jpg", height: 200, width: 200 ) %>
 </div>
 
 <div class="col-sm-3">
